# SSRFHunter-Pro

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  ssrfhunter_history.db
.github/workflows/: python-ci.yml
docs/: usage.md
examples/: config.yml  targets.txt
payloads/: default.yml
ssrfhunter/: __init__.py
ssrfhunter/analysis/: __init__.py  scoring.py
ssrfhunter/cli/: __init__.py  main.py
ssrfhunter/config/: __init__.py  settings.py
ssrfhunter/core/: __init__.py  engine.py
ssrfhunter/crawler/: __init__.py  crawler.py
ssrfhunter/database/: __init__.py  store.py
ssrfhunter/detection/: __init__.py  engine.py
ssrfhunter/exceptions/: __init__.py  exceptions.py
ssrfhunter/logging/: __init__.py  setup.py
ssrfhunter/models/: __init__.py  models.py
ssrfhunter/parser/: __init__.py  extractor.py
ssrfhunter/payloads/: __init__.py  loader.py
ssrfhunter/reporting/: __init__.py  generator.py
ssrfhunter/requester/: __init__.py  client.py
ssrfhunter/scanner/: __init__.py  runner.py
ssrfhunter_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: report.html.j2  report.md.j2
tests/: test_config.py  test_payload_loader.py  test_reporting.py  test_requester.py
