[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssrfhunter-pro"
version = "0.1.0"
description = "Enterprise-grade SSRF security assessment framework"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "SSRFHunter Pro Maintainers" }]
license = { text = "MIT" }
dependencies = [
  "aiohttp>=3.10",
  "httpx>=0.28",
  "typer>=0.12",
  "rich>=13.7",
  "beautifulsoup4>=4.15.0",
  "selectolax>=0.3",
  "jinja2>=3.1",
  "pydantic>=2.8",
  "aiosqlite>=0.10",
  "sqlalchemy>=2.0",
  "pyyaml>=6.0",
  "orjson>=3.11.0",
  "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "coverage>=7.0",
  "mypy>=1.10",
  "ruff>=0.5",
  "black>=24.0",
]

[project.scripts]
ssrfhunter = "ssrfhunter.cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ssrfhunter*"]
